# classroom-audio-research

./: .gitignore  Dockerfile  README.md  pyproject.toml
audio-capture-server/: README.txt  capture.html  capture.js  cert.pem  key.pem  server.py
audio_analysis/: analysis.py  analysis_server.py  audio_io.py  config.py  dashboard.html  enhancement.py  evaluation.py  orchestrator.py  pipeline_adaptive.py  pipeline_aec.py  pipeline_full.py  pipeline_mvp.py  pipeline_ratiovat.py  pipeline_raw.py  pipeline_reftext.py  pipeline_vad.py  pipeline_vad_chunked.py  sessions.py  speaker_ground_truth.docx  transcription_utils.py  vad.py  visualizations.py  voice_enrollment.docx
docs/: CURRENT_RESULTS.md  KICKOFF.md  TECHNICAL_PRIMER.md
results/: baseline-2026-03-28.json
scripts/: download_models.py  download_wham.py  generate_test_audio.py  mix_audio.py
src/: config.py  main.py
src/api/: routes.py  schemas.py
src/asr/: base.py  mock.py  whisper_asr.py
src/embeddings/: base.py  ecapa.py
src/evaluation/: audio_utils.py  metrics.py
src/tse/: base.py  campplus_verifier.py  meanflow.py  mock.py
tests/: conftest.py  test_api.py  test_asr.py  test_audio_utils.py  test_metrics.py  test_tse.py
